# Vaults

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/godiegh/vaults/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  vaults_config.json
app/src/main/assets/: vaults_config.json
app/src/main/java/com/godiegh/vaults/: AddserviceScreen.kt  BackupRestoreViewModel.kt  BackupSaltScreen.kt  BiometricAuthenticator.kt  ConfigManager.kt  Googledriveauth.kt  HomeScreen.kt  LifecycleRotationScreen.kt  MainActivity.kt  NewServicePinScreen.kt  ReAuthForBackupScreen.kt  ReAuthScreen.kt  RestoreBackupScreen.kt  RevealPinScreen.kt  RotatePinScreen.kt  SettingsScreen.kt  SyncWorker.kt  ThemeState.kt  TotpSetupScreen.kt  TwoFactorSetupScreen.kt  VaultsStorage.kt
app/src/main/java/com/godiegh/vaults/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/godiegh/vaults/uniffi/uniffi/vaults/: vaults.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/test/java/com/godiegh/vaults/: BackupEncryptionTest.kt  ExampleUnitTest.kt
core/: Cargo.toml
core/vaults-cli/: Cargo.toml
core/vaults-cli/src/: main.rs
core/vaults-core/: Cargo.toml  build.rs
core/vaults-core/src/: ffi.rs  lib.rs  vaults.udl
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
